--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "astro": "^4.5.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.42.1",
+    "@types/node": "^20.11.28"
   }
 }
